[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/scripts/cutscenes/prologue/Prologue1.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/ui/mainmenu/whitescreen.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/cutscenes/prologue/prologue_cutscene_brandon_whispersand_1.png" type="Texture" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/Basis33/basis33.ttf"

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = SubResource( 1 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Prologue1" type="Node2D"]
script = ExtResource( 1 )

[node name="Black" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_right = 640.0
margin_bottom = 360.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="TextLabel" type="Node2D" parent="."]

[node name="TextLabel1" type="RichTextLabel" parent="TextLabel"]
margin_left = 54.0
margin_top = 196.0
margin_right = 1254.0
margin_bottom = 535.0
rect_pivot_offset = Vector2( 600, 150 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center][fill]\"Lute com coragem e, mesmo na escuridão do mais terrível desespero, sempre haverá esperança. Nunca se esqueça disso.\" 
									- B.W.[/fill][/center]"
text = "\"Lute com coragem e, mesmo na escuridão do mais terrível desespero, sempre haverá esperança. Nunca se esqueça disso.\" 
									- B.W."
scroll_active = false

[node name="Timers" type="Node2D" parent="."]

[node name="PRECUTSCENE_DELAY" type="Timer" parent="Timers"]
wait_time = 1.5
one_shot = true

[node name="AFTER_QUOTE_DELAY" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.25098 )
position = Vector2( 1437, 807 )
scale = Vector2( 4.49306, 4.49306 )
frames = SubResource( 3 )
[connection signal="timeout" from="Timers/AFTER_QUOTE_DELAY" to="." method="_on_AFTER_QUOTE_DELAY_timeout"]
